Simplify variable names

--- a/storefront-site/html/checkout.html
+++ b/storefront-site/html/checkout.html
@@ -145,7 +145,7 @@
             </form>
             <div class="subtotal-container">
                 <div class="subtotal">
-                    <span>Subtotal (<span class="total-cart-item-quantity"></span>): <b>$<span class="total-cart-subtotal"></span></b></span><br>
+                    <span>Subtotal (<span class="cart-total-item-quantity"></span>): <b>$<span class="cart-subtotal"></span></b></span><br>
                     <span>Delivery Fee: </span>
                     <span style="color: #007600;"><span class="material-icons" style="font-size: 1em;">check_circle</span> Free</span>
                     <br>
