Dynamically render user preferences pages

--- a/storefront-site/html/user-preferences-change-email-subscription.html
+++ b/storefront-site/html/user-preferences-change-email-subscription.html
@@ -64,15 +64,15 @@
                     <br>
                     <label for="newsletter"><b>Subscribe to Newsletter</b></label>
                     <br>
-                    <input type="checkbox" name="newsletter" checked>Newsletter
+                    <input class="user-email-newsletter-checkbox" type="checkbox" name="newsletter">Newsletter
                     <br>
                     <label for="promotions"><b>Subscribe to Promotions</b></label>
                     <br>
-                    <input type="checkbox" name="promotions" checked>Promotions
+                    <input class="user-email-promotions-checkbox" type="checkbox" name="promotions">Promotions
                     <br>
                     <label for="reminders"><b>Subscribe to Reminders</b></label>
                     <br>
-                    <input type="checkbox" name="reminders" checked>Reminders
+                    <input class="user-email-reminders-checkbox" type="checkbox" name="reminders">Reminders
                     <br>
                     <a href="../index.html">
                         <button type="submit" class="submit-button">Save Changes</button>
@@ -122,6 +122,7 @@
         </nav>
     </footer>
     <!-- END FOOTER -->
+    <script src="../scripts/render-user-details.js" type="module"></script>
 </body>
 
 </html>
