--- a/storefront-site/html/user-preferences-change-email.html
+++ b/storefront-site/html/user-preferences-change-email.html
@@ -64,7 +64,7 @@
                     <br>
                     <label for="email"><b>New email</b></label>
                     <br>
-                    <input type="email" name="email" value="example@example.com" required autofocus>
+                    <input class="user-email-input" type="email" name="email" required autofocus>
                     <br>
                     <a href="../index.html">
                         <button type="submit" class="submit-button">Save Changes</button>
