--- a/storefront-site/html/user-preferences-change-name.html
+++ b/storefront-site/html/user-preferences-change-name.html
@@ -64,7 +64,7 @@
                     <br>
                     <label for="name"><b>New name</b></label>
                     <br>
-                    <input type="text" name="name" value="John Doe" required autofocus>
+                    <input class="user-name-input" type="text" name="name" required autofocus>
                     <br>
                     <a href="../index.html">
                         <button type="submit" class="submit-button">Save Changes</button>
@@ -111,6 +111,7 @@
         </nav>
     </footer>
     <!-- END FOOTER -->
+    <script src="../scripts/render-user-details.js" type="module"></script>
 </body>
 
 </html>
