--- a/storefront-site/html/user-preferences.html
+++ b/storefront-site/html/user-preferences.html
@@ -62,7 +62,7 @@
                     </a>
                     <b>Name:</b>
                     <br>
-                    John Doe
+                    <span class="user-name"></span>
                 </div>
                 <hr>
                 <div class="preferences-form-section">
@@ -71,7 +71,7 @@
                     </a>
                     <b>Email:</b>
                     <br>
-                    example@example.com
+                    <span class="user-email"></span>
                 </div>
                 <hr>
                 <div class="preferences-form-section">
@@ -135,6 +135,7 @@
         </nav>
     </footer>
     <!-- END FOOTER -->
+    <script src="../scripts/render-user-details.js" type="module"></script>
 </body>
 
 </html>
