Remove autocomplete on sensitive fields

--- a/storefront-site/html/login.html
+++ b/storefront-site/html/login.html
@@ -20,12 +20,12 @@
             <h1>Sign-In</h1>
             <label for="email"><b>Email</b></label>
             <br>
-            <input type="email" name="email" required autofocus>
+            <input type="email" name="email" required autofocus spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
             <br>
             <div class="form-spacer"></div>
             <label for="password"><b>Password</b></label>
             <br>
-            <input type="password" name="password" required>
+            <input type="password" name="password" required spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
             <br>
             <div class="form-spacer"></div>
             <button type="submit" class="sign-in-button">Continue</button>
