--- a/storefront-site/html/register.html
+++ b/storefront-site/html/register.html
@@ -26,12 +26,12 @@
             <div class="form-spacer"></div>
             <label for="email"><b>Email</b></label>
             <br>
-            <input type="email" name="email" required>
+            <input type="email" name="email" required spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
             <br>
             <div class="form-spacer"></div>
             <label for="password"><b>Password</b></label>
             <br>
-            <input type="password" placeholder="At least 6 characters" name="password" required>
+            <input type="password" placeholder="At least 6 characters" name="password" required spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
             <br>
             <div id="password-requirement">
                 <span class="material-icons" style="font-size: 16px;">info</span> Passwords must be at least 6 characters.
@@ -39,7 +39,7 @@
             <br>
             <label for="password-repeat"><b>Re-enter password</b></label>
             <br>
-            <input type="password" name="password-repeat" required>
+            <input type="password" name="password-repeat" required spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
             <br>
             <div class="form-spacer"></div>
             <button type="submit" class="create-account-button">Create your account</button>
