--- a/storefront-site/html/user-preferences-change-password.html
+++ b/storefront-site/html/user-preferences-change-password.html
@@ -64,15 +64,15 @@
                     <br>
                     <label for="current-password"><b>Current Password</b></label>
                     <br>
-                    <input type="password" name="current-password" required autofocus>
+                    <input type="password" name="current-password" required autofocus spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
                     <br>
                     <label for="new-password"><b>New Password</b></label>
                     <br>
-                    <input type="password" name="new-password" required>
+                    <input type="password" name="new-password" required spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
                     <br>
                     <label for="repeat-password"><b>Repeat New Password</b></label>
                     <br>
-                    <input type="password" name="repeat-password" required>
+                    <input type="password" name="repeat-password" required spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
                     <br>
                     <a href="../index.html">
                         <button type="submit" class="submit-button">Save Changes</button>
