--- a/storefront-site/html/user-preferences-change-password.html
+++ b/storefront-site/html/user-preferences-change-password.html
@@ -57,7 +57,7 @@
                 <b>Change Password</b>
             </nav>
             <h1>Change Password</h1>
-            <form class="preferences-form" action="./user-preferences.html">
+            <form id="user-password-form" class="preferences-form" action="./user-preferences.html">
                 <div class="preferences-form-section">
                     Use the form below to change the password for your account.
                     <br>
@@ -119,6 +119,7 @@
         </nav>
     </footer>
     <!-- END FOOTER -->
+    <script src="../scripts/handle-user-preferences.js" type="module"></script>
 </body>
 
 </html>
