Don't autocomplete sensitive fields

--- a/storefront-site/html/user-preferences-change-name.html
+++ b/storefront-site/html/user-preferences-change-name.html
@@ -64,7 +64,7 @@
                     <br>
                     <label for="name"><b>New name</b></label>
                     <br>
-                    <input class="user-name-input" type="text" name="name" required autofocus>
+                    <input class="user-name-input" type="text" name="name" required autofocus spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
                     <br>
                     <a href="../index.html">
                         <button id="user-name-input-submit" type="submit" class="submit-button">Save Changes</button>
