--- a/storefront-site/html/products/product.html
+++ b/storefront-site/html/products/product.html
@@ -85,9 +85,7 @@
             <br>
             <br>
             <h2>Other Products:</h2>
-            <div class="other-products" id="other-products">
-                
-            </div>
+            <div class="other-products" id="other-products"></div>
         </div>
     </main>
     <!-- BEGIN FOOTER -->
