Fix ambiguous naming

--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -142,7 +142,7 @@
                     <input type="checkbox" id="cart-gift"><span style="font-size: 0.9em;"> This order contains a gift
                     <br>
                     <a href="./checkout.html">
-                        <button id="button" type="submit" class="submit-button">Proceed to checkout</button>
+                        <button id="checkout-button" type="submit" class="submit-button">Proceed to checkout</button>
                     </a>
                 </div>
             </div>
