Validate new password length

--- a/storefront-site/html/user-preferences-change-password.html
+++ b/storefront-site/html/user-preferences-change-password.html
@@ -68,12 +68,15 @@
                     <br>
                     <label for="new-password"><b>New Password</b></label>
                     <br>
-                    <input type="password" name="new-password" required spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
+                    <input id="new-password" type="password" name="new-password" required spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off" minlength="6">
                     <br>
                     <label for="repeat-password"><b>Repeat New Password</b></label>
                     <br>
-                    <input type="password" name="repeat-password" required spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
-                    <br>
+                    <input id="repeat-password" type="password" name="repeat-password" required spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off" minlength="6">
+                    <div id="error-message-container" style="display: none; color: #c41829;">
+                        <span class="material-icons" style="font-size: 16px;">error</span>
+                        <span id="error-message"></span>
+                    </div>
                     <a href="../index.html">
                         <button type="submit" class="submit-button">Save Changes</button>
                     </a>
