Display detailed errors when changing password

--- a/storefront-site/html/user-preferences-change-password.html
+++ b/storefront-site/html/user-preferences-change-password.html
@@ -63,14 +63,22 @@
                     <br>
                     <br>
                     <label for="current-password"><b>Current Password</b></label>
-                    <input type="password" name="current-password" required autofocus spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
-                    <label for="new-password"><b>New Password</b></label>
-                    <input id="new-password" type="password" name="new-password" required spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off" minlength="6">
-                    <label for="repeat-password"><b>Repeat New Password</b></label>
-                    <input id="repeat-password" type="password" name="repeat-password" required spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off" minlength="6">
-                    <div id="error-message-container" style="display: none; color: #c41829;">
+                    <input id="current-password" type="password" name="current-password" autofocus spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
+                    <div id="error-message-container-1" style="display: none; color: #c41829;">
                         <span class="material-icons" style="font-size: 16px;">error</span>
-                        <span id="error-message"></span>
+                        <span id="error-message-1"></span>
+                    </div>
+                    <label for="new-password"><b>New Password</b></label>
+                    <input id="new-password" type="password" name="new-password" spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
+                    <div id="error-message-container-2" style="display: none; color: #c41829;">
+                        <span class="material-icons" style="font-size: 16px;">error</span>
+                        <span id="error-message-2"></span>
+                    </div>
+                    <label for="repeat-password"><b>Repeat New Password</b></label>
+                    <input id="repeat-password" type="password" name="repeat-password" spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
+                    <div id="error-message-container-3" style="display: none; color: #c41829;">
+                        <span class="material-icons" style="font-size: 16px;">error</span>
+                        <span id="error-message-3"></span>
                     </div>
                     <a href="../index.html">
                         <button type="submit" class="submit-button">Save Changes</button>
