--- a/storefront-site/html/login.html
+++ b/storefront-site/html/login.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/google-material-icons.css">
     <link rel="stylesheet" href="../styles/login.css">
     <link rel="stylesheet" href="../styles/mini-footer.css">
 </head>
@@ -16,17 +17,21 @@
         <a href="../index.html" class="logo">
             <img src="../images/logo-black.png" class="logo">
         </a>
-        <form class="login-form">
+        <form id="login-form" class="login-form">
             <h1>Sign-In</h1>
             <label for="email"><b>Email</b></label>
-            <br>
-            <input type="email" name="email" required autofocus spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
-            <br>
+            <input id="login-email-input" type="text" name="email" autofocus spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
+            <div id="error-message-container-1" style="display: none; color: #c41829;">
+                <span class="material-icons" style="font-size: 16px;">error</span>
+                <span id="error-message-1" style="font-size: 0.9em;"></span>
+            </div>
             <div class="form-spacer"></div>
             <label for="password"><b>Password</b></label>
-            <br>
-            <input type="password" name="password" required spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
-            <br>
+            <input id="login-password-input" type="password" name="password" spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
+            <div id="error-message-container-2" style="display: none; color: #c41829;">
+                <span class="material-icons" style="font-size: 16px;">error</span>
+                <span id="error-message-2" style="font-size: 0.9em;"></span>
+            </div>
             <div class="form-spacer"></div>
             <button type="submit" class="sign-in-button">Continue</button>
             <br>
@@ -57,4 +62,5 @@
             </div>
         </div>
     </footer>
+    <script src="../scripts/handle-login.js" type="module"></script>
 </body>
