Display pretty errors on register and login

--- a/storefront-site/html/login.html
+++ b/storefront-site/html/login.html
@@ -21,16 +21,16 @@
             <h1>Sign-In</h1>
             <label for="email"><b>Email</b></label>
             <input id="login-email-input" type="text" name="email" autofocus spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
-            <div id="error-message-container-1" style="display: none; color: #c41829;">
+            <div id="error-message-container-email" style="display: none; color: #c41829;">
                 <span class="material-icons" style="font-size: 16px;">error</span>
-                <span id="error-message-1" style="font-size: 0.9em;"></span>
+                <span id="error-message-email" style="font-size: 0.8em;"></span>
             </div>
             <div class="form-spacer"></div>
             <label for="password"><b>Password</b></label>
             <input id="login-password-input" type="password" name="password" spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
-            <div id="error-message-container-2" style="display: none; color: #c41829;">
+            <div id="error-message-container-password" style="display: none; color: #c41829;">
                 <span class="material-icons" style="font-size: 16px;">error</span>
-                <span id="error-message-2" style="font-size: 0.9em;"></span>
+                <span id="error-message-password" style="font-size: 0.8em;"></span>
             </div>
             <div class="form-spacer"></div>
             <button type="submit" class="sign-in-button">Continue</button>
