--- a/storefront-site/html/user-preferences-change-password.html
+++ b/storefront-site/html/user-preferences-change-password.html
@@ -64,21 +64,21 @@
                     <br>
                     <label for="current-password"><b>Current Password</b></label>
                     <input id="current-password" type="password" name="current-password" autofocus spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
-                    <div id="error-message-container-1" style="display: none; color: #c41829;">
+                    <div id="error-message-container-password" style="display: none; color: #c41829;">
                         <span class="material-icons" style="font-size: 16px;">error</span>
-                        <span id="error-message-1"></span>
+                        <span id="error-message-password"></span>
                     </div>
                     <label for="new-password"><b>New Password</b></label>
                     <input id="new-password" type="password" name="new-password" spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
-                    <div id="error-message-container-2" style="display: none; color: #c41829;">
+                    <div id="error-message-container-new" style="display: none; color: #c41829;">
                         <span class="material-icons" style="font-size: 16px;">error</span>
-                        <span id="error-message-2"></span>
+                        <span id="error-message-new"></span>
                     </div>
                     <label for="repeat-password"><b>Repeat New Password</b></label>
                     <input id="repeat-password" type="password" name="repeat-password" spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
-                    <div id="error-message-container-3" style="display: none; color: #c41829;">
+                    <div id="error-message-container-repeat" style="display: none; color: #c41829;">
                         <span class="material-icons" style="font-size: 16px;">error</span>
-                        <span id="error-message-3"></span>
+                        <span id="error-message-repeat"></span>
                     </div>
                     <a href="../index.html">
                         <button type="submit" class="submit-button">Save Changes</button>
