--- a/storefront-site/html/user-preferences-change-email.html
+++ b/storefront-site/html/user-preferences-change-email.html
@@ -64,9 +64,9 @@
                     <br>
                     <label for="email"><b>New email</b></label>
                     <input id="user-email-input" class="user-email-input" type="text" name="email" autofocus spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
-                    <div id="error-message-container-1" style="display: none; color: #c41829;">
+                    <div id="error-message-container-email" style="display: none; color: #c41829;">
                         <span class="material-icons" style="font-size: 16px;">error</span>
-                        <span id="error-message-1"></span>
+                        <span id="error-message-email"></span>
                     </div>
                     <a href="../index.html">
                         <button id="user-email-input-submit" type="submit" class="submit-button">Save Changes</button>
