Redirect to homepage on login and register

--- a/storefront-site/html/login.html
+++ b/storefront-site/html/login.html
@@ -17,7 +17,7 @@
         <a href="../index.html" class="logo">
             <img src="../images/logo-black.png" class="logo">
         </a>
-        <form id="login-form" class="login-form">
+        <form id="login-form" class="login-form" action="../index.html">
             <h1>Sign-In</h1>
             <label for="email"><b>Email</b></label>
             <input id="login-email-input" type="text" name="email" autofocus spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off">
