--- a/storefront-site/html/register.html
+++ b/storefront-site/html/register.html
@@ -17,7 +17,7 @@
         <a href="../index.html" class="logo">
             <img src="../images/logo-black.png" class="logo">
         </a>
-        <form id="register-form" class="register-form">
+        <form id="register-form" class="register-form" action="../index.html">
             <h1>Create Account</h1>
             <label for="name"><b>Your name</b></label>
             <input id="register-name-input" type="text" name="name" autofocus>
