--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -56,12 +56,24 @@
             <div class="featured-product-container">
                 <div class="featured-product-content">
                     <h2>Currently Popular</h2>
-                    <a href="./html/products/product.html?id=1">
+                    <template id="popular-product-template">
+                        <div>
+                            <a class="popular-product-link">
+                                <div class="featured-product">
+                                    <img alt="Currently Popular Product">
+                                </div>
+                            </a>
+                            <span>
+                                <a class="see-popular-products">See More</a>
+                            </span>
+                        </div>
+                    </template>
+                    <!-- <a href="./html/products/product.html?id=1">
                         <div class="featured-product">
                             <img src="./images/product1.png" alt="Currently Popular Product">
                         </div>
                     </a>
-                    <span><a href="./html/products/product.html?id=1">See More</a></span>
+                    <span><a href="./html/products/product.html?id=1">See More</a></span> -->
                 </div>
             </div>
             <div class="featured-product-container">
