Fix cart button not rendering quantity

--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -187,6 +187,7 @@
     </footer>
     <!-- END FOOTER -->
     <script src="../scripts/render-cart.js" type="module"></script>
+    <script src="../scripts/render-cart-quantity.js" type="module"></script>
 </body>
 
 </html>
