cart header implement html wide

--- a/storefront-site/html/aboutus.html
+++ b/storefront-site/html/aboutus.html
@@ -25,7 +25,7 @@
             <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
         </form>
         <nav class="header-nav">
-            <a href="./cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
+            <a href="./cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart (<span class="cart-total"></span>)</a>
             <a href="./user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span>
                 Preferences</a>
             <div class="header-login-dropdown">
@@ -104,6 +104,7 @@
         </nav>
     </footer>
     <!-- END FOOTER -->
+    <script src="../scripts/render-cart-quantity.js" type="module"></script>
 </body>
 
 </html>
