cart on main page

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -28,7 +28,7 @@
             <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
         </form>
         <nav class="header-nav">
-            <a href="./html/cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
+            <a href="./html/cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart (<span class="cart-total"></span>)</a>
             <a href="./html/user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span> Preferences</a>
             <div class="header-login-dropdown">
                 <a href="./html/login.html" class="header-nav-link">Sign In ▼</a>
@@ -153,6 +153,7 @@
     </footer>
     <!-- END FOOTER -->
     <script src="./scripts/render-home.js" type="module"></script>
+    <script src="./scripts/render-cart-quantity.js" type="module"></script>
 </body>
 
 </html>
